--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -62,58 +62,60 @@
   </div>
   <div class="col-6 col-md-4 text-center">
     <h5 class="cobMed text-decoration-underline" >Coberturas médicas</h5>
-    <ul>
-      <li class="list-group-item">Accord Salud</li>
-      <li class="list-group-item">Galeno</li>
-      <li class="list-group-item">Medicus</li>
-      <li class="list-group-item">Omint</li>
-      <li class="list-group-item">Osde</li>
-      <li class="list-group-item">Swiss Medical</li>
-    </ul>
+    <p class="cobItem">Accord Salud</p>
+    <p class="cobItem">Galeno</p>
+    <p class="cobItem">Medicus</p>
+    <p class="cobItem">Omint</p>
+    <p class="cobItem">Osde</p>
+    <p class="cobItem">Swiss Medical</p> 
     <h5 class="bonoDesc text-decoration-underline">Bonos de descuento</h5>
-    <ul>
-      <li class="list-group-item">Andrómaco</li>
-      <li class="list-group-item">Cassará</li>
-      <li class="list-group-item">Fortbenton</li>
-      <li class="list-group-item">Panalab</li>
-      <li class="list-group-item">PAP</li>
-    </ul>
-   
+    <p class="cobItem">Andrómaco</p>
+    <p class="cobItem">Cassará</p>
+    <p class="cobItem">Fortbenton</p>
+    <p class="cobItem">Panalab</p>
+    <p class="cobItem">PAP</p>  
   </div>
 </div>    
   </main>
-  <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
-      </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-        <span>
-          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
-        </span>
-        <span>
-          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
-        </span>
-        <span>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
-        </span>
-        <span>
-          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
-        </span>
-        <span>
-          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
-        </span>
-      </div>
+  <footer class="footerContainer">
+    <div class="container-fluid text-center">
+      <div class="row row-cols-3">
+        <div class="col footerContainerDiv1">
+          <h4 class="text-decoration-underline">Ubicación</h4>
+            <p>Av. Corrientes 1801, CABA</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col footerContainerDiv2 ">
+          <h4 class="text-decoration-underline ms-1">Contacto</h4>
+          <p>Teléfono 011-5555-1234</plass=>
+          <p>Celular 011-15-999-8765</ps=>
+          <p>contacto@farmacianoble.com.ar</p>
+        </div>
+        <div class="col footerContainerDiv3 ">
+          <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+          <div class="icons-wrapper">
+            <span class="footerBg">
+              <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-4"></i></a>
+            </span>
+            <span class="footerBg">
+              <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-4"></i></a>
+            </span>
+            <span class="footerBg">
+              <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-4"></i></a>
+            </span>
+            <span class="footerBg">
+              <a href="https://twitter.com/" target="_blank" class="footerBg"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-4"></i></a>
+            </span>
+            <span class="footerBg">
+              <a href="https://www.whatsapp.com/" target="_blank" class="footerBg"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-4"></i></a>
+            </span>     
+          </div>
+        </div>
+          </div>
+          <div class="footerContainerDiv4"><!--grupo2-->
+            <small>&copy; 2024 - Todos los Derechos Reservados.</small>
+          </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
   </footer>
   <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
