--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,13 +46,13 @@
   </header>
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Contacto</h1>
-    <div class="text-center contactForm">
-      <h4>Nos interesa conocer cómo fue tu experiencia en Farmacia Noble</h4>
-      <h4>Podés dejarnos tu consulta, sugerencia o reclamo a través de nuestro formulario.</h4> 
-      <h4>Nuestro tiempo de respuesta es de 24 hs.</h4>
-      <h5 class=""mx-auto">Nunca compartiremos su información con terceros.</h5>
+    <div class="text-center">
+      <h4>Nos interesa conocer cómo fue tu experiencia en Farmacia Noble.</h4> 
+      <h5>Podés dejarnos tu consulta, sugerencia o reclamo a través de nuestro formulario.</h5>
+      <h5>Nuestro tiempo de respuesta es de 24 hs.</class=>
+      <p class=""mx-auto">Nunca compartiremos su información con terceros.</p>
     </div>
-    <div class="mx-auto p-2" style="width: 800px;";>
+    <div class="mx-auto p-2 contactForm";>
       <form action="" class="class">
         <div class="mb-3">
           <input type="text" placeholder="Ingrese su nombre y apellido" class="form-control" id="name" name="name">
@@ -111,59 +111,48 @@
           </form>
       </div>
     -->
-
-
-
     
   </main>
-  <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
-      </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-            <span>
-              <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+  <footer class="footerContainer">
+    <div class="container-fluid text-center">
+      <div class="row row-cols-3">
+        <div class="col footerContainerDiv1">
+          <h4 class="text-decoration-underline">Ubicación</h4>
+            <p>Av. Corrientes 1801, CABA</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col footerContainerDiv2 ">
+          <h4 class="text-decoration-underline ms-1">Contacto</h4>
+          <p>Teléfono 011-5555-1234</plass=>
+          <p>Celular 011-15-999-8765</ps=>
+          <p>contacto@farmacianoble.com.ar</p>
+        </div>
+        <div class="col footerContainerDiv3 ">
+          <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+          <div class="icons-wrapper">
+            <span class="footerBg">
+              <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-4"></i></a>
             </span>
-            <span>
-              <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+            <span class="footerBg">
+              <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-4"></i></a>
             </span>
-            <span>
-              <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+            <span class="footerBg">
+              <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-4"></i></a>
             </span>
-            <span>
-              <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+            <span class="footerBg">
+              <a href="https://twitter.com/" target="_blank" class="footerBg"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-4"></i></a>
             </span>
-            <span>
-              <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
-            </span><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
-      </div>
+            <span class="footerBg">
+              <a href="https://www.whatsapp.com/" target="_blank" class="footerBg"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-4"></i></a>
+            </span>     
+          </div>
+        </div>
+          </div>
+          <div class="footerContainerDiv4"><!--grupo2-->
+            <small>&copy; 2024 - Todos los Derechos Reservados.</small>
+          </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
   </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  </body>
 </html>
