grabo modificaciones en tienda

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </div>
         <div class="col footerContainerDiv2 ">
           <h4 class="text-decoration-underline ms-1">Contacto</h4>
-          <p>Teléfono 011-5555-1234</plass=>
-          <p>Celular 011-15-999-8765</ps=>
+          <p>Teléfono 011-5555-1234</p>
+          <p>Celular 011-15-999-8765</p>
           <p>contacto@farmacianoble.com.ar</p>
         </div>
         <div class="col footerContainerDiv3 ">
@@ -99,7 +99,7 @@
           </div>
         </div>
           </div>
-          <div class="footerContainerDiv4"><!--grupo2-->
+          <div class="footerContainerDiv4">
             <small>&copy; 2024 - Todos los Derechos Reservados.</small>
           </div>
     </div>
