--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,43 +75,10 @@
          <textarea class="form-control" id="comentario" name="Ingrese su sugerencia o reclamo..." rows="3">...</textarea>
         </div>
         <div class="text-center">
-          <input type="submit" class="sendButton w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
+          <input type="submit" class="sendButton w-50 btn btn-primary" id="enviar" name="enviar" value="Enviar">
         </div>        
       </form>
-    </div>
-    
-
-
-    <!--<div class="mt-5 mb-5 row justify-content-center justify-content-md-between align-items-center align-items-md-stretch">
-      <div class="col-12 col-md-6  justify-content-center">
-          <form action="">
-              <div class="mb-3">
-                  <input type="text" placeholder="Ingrese su nombre y apellido" class="form-control" id="name" name="name">
-              </div>
-              <div class="mb-3">
-                  <select class="form-select" aria-label="Default select example">
-                      <option selected>Indique el motivo de contacto:</option>
-                      <option value="1">Consulta</option>
-                      <option value="2">Reclamo</option>
-                      <option value="3">Sugerencia</option>
-                    </select>
-              </div>
-              <div class="mb-3">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@servidor.com">
-              </div>
-              <div class="mb-3">
-                  <input type="tel" class="form-control" id="tel" name="tel" placeholder="(011)15-1234-5678">
-              </div>
-              <div class="mb-3">
-                 <textarea class="form-control" id="comentario" name="Ingrese su sugerencia o reclamo..." rows="3">...</textarea>
-              </div>
-              <div class="text-center">
-                  <input type="submit" class=" w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
-              </div>
-          </form>
-      </div>
-    -->
-    
+    </div>   
   </main>
   <footer class="footerContainer">
     <div class="container-fluid text-center">
