--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -46,18 +46,18 @@
   </header>
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Comprar receta</h1>
-    <h3 class="text-center ps-2">Podés enviarnos tu receta  digital o en papel.</h3>
-    <h3 class="text-center ps-2">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto</h3>
+    <h4 class="text-center ps-2">Podés enviarnos tu receta  digital o en papel.</h4>
+    <h4 class="text-center ps-2">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto</h4>
     <h4 class="text-start ps-4">Para canjear una receta siga los siguientes tres simples pasos:</h4>
     <div class="row g-0 text-center">
   <div class="col-sm-6 col-md-8 text-start ps-4">
     <ol class="text-start">
-      <li>Verifique que trabajamos su <a href="#cobMed">cobertura médica</a> o <a href="bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
-      <li>Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
+      <li class="fs-5">Verifique que trabajamos su <a class="medLink btn btn-primary" href="#cobMed">cobertura médica</a> o <a class="medLink btn btn-primary" href="#bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
+      <li class="fs-5">Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
         El envío o retiro se coordina por Whatsapp. 
         Si desea recibir el pedido en su domicilio, verifique nuestra zona de cobertura:</li>
-        <iframe class="position-center pt-2" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
-      <li>Para enviar tu receta hacé <a href="https://www.whatsapp.com/" target="_blank">click aquí</a></li>
+        <iframe class="deliveryMap" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
+      <li class="fs-5">Para enviar tu receta hacé click <a class="medLink w-10 btn btn-primary" href="https://www.whatsapp.com/" target="_blank">aquí</a></li>
     </ol>
   </div>
   <div class="col-6 col-md-4 text-center">
