--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -54,12 +54,12 @@
       <section class="notiSection">
         <h3 class="notiSectionTitle">Medicamentos sin TACC</h3>
         <img class="notiImg1" src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
-        <p class="notiSectionText"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
+        <p class="notiSectionText"><a class="leerMas w-50 btn btn-primary" href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
       </section>
       <section class="notiSection">
         <h3 class="notiSectionTitle">Diferencias entre un protector y un bloqueador solar</h3>
         <img class="notiImg2" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
-        <p class="notiSectionText"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>
+        <p class="notiSectionText"><a class="leerMas w-50 btn btn-primary" href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>
       </section>
     </div>
   </main>
