--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
@@ -45,7 +45,6 @@
     </nav>
   </header>
   <main>
-<<<<<<< HEAD
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Noticias</h1>
     <div class="notiDiv d-flex d-inline text-center">
       <section class="notiSection">
@@ -103,64 +102,6 @@
             <small>&copy; 2024 - Todos los Derechos Reservados.</small>
           </div>
     </div>
-=======
-    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" style="background-color:rgba(126, 205, 15, 0.5)">Noticias</h1>
-    <div class="noticias d-flex d-row justify-content-evenly align-items-center">
-          <div class="p-2">
-        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
-          <h5 class="card-title fw-bold pt-2 pb-2">Te mostramos cómo elegir la fragancia adecuada para vos</h5>
-          <iframe width="350" height="300" src="https://www.youtube.com/embed/e-SXF_Cc5Cs?si=DMUCQBKkhrgUjUwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-      </div>
-      <div class="p-2">
-        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
-          <h5 class="card-title fw-bold pt-2 pb-2">Medicamentos sin TACC</h5> 
-          <img width="350" height="280" src="../assets/img/noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
-          <p class="pt-3"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
-        </div>
-      </div>
-      <div class="p2">
-        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3" >
-          <h5 class="card-title fw-bold pt-2 pb-2">¿Qué diferencias hay entre un protector y un bloqueador solar?</h5>
-          <img width="300" height="250" src="../assets/img/noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
-          <p class="pt-3"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>            
-        </div>
-      </div>      
-    </div>
-   </main>
-   <footer class="container-fluid text-center">
-    <div class="row">
-      <div class="col 12 col-lg-4 pt-2">
-        <h5 class="text-decoration-underline pt-2">Ubicación</h5>
-          <p class="pt-2">Av. Corrientes 1801, CABA</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div class="col 12 col-lg-4 pt-2">
-        <h5 class="text-decoration-underline ms-1 pt-2">Contacto</h5>
-        <p class="pt-2">011-5555-1234</p>
-        <p class="pt-2">contacto@farmacianoble.com.ar</p>
-      </div>
-      <div class="col 12 col-lg-4 pt-2">
-        <h5 class="text-decoration-underline ms-1 pt-2">Seguinos en nuestras redes sociales</h5>
-        <span>
-          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-2"></i></a>
-        </span>
-        <span>
-          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-2"></i></a>
-        </span>
-        <span>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-2"></i></a>
-        </span>
-        <span>
-          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-2"></i></a>
-        </span>
-        <span>
-          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-2"></i></a>
-        </span>
-      </div>
-    </div>
-    <p class="pt-2">Todos los derechos reservados - 2024</p>
->>>>>>> 2997c9729ecaca3c10d868dcbdf08a5aa7721e0d
   </footer>
   <script src="./js/bootstrap.bundle.min.js""></script>
   <script src="./js/bootstrap.bundle.min.js""></script>
