incorporo modificaciones seo

--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble </title>
+  <title>Comprar bono o receta | Farmacia Noble </title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="Sitio para adquirir medicamentos y productos de perfumería con descuentos de recetas y bonos">
+  <meta name="keywords" content="receta, canjear receta, comprar receta, usar bono descuento, obra social, prepaga, delivery">
 </head>
 <body>
   <header class="header position-sticky top-0">
