--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble</title>
+  <title>Farmacia Noble | Farmacia, perfumería y dermocosmética </title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <meta name="description" content="Página de bienvenida a la farmacia y perfumería Noble">
+  <meta name="keywords" content="farmacia, perfumeria, dermocosmetica">
 </head>
 <body>
   <header class="header position-sticky top-0">
