--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble </title>
+  <title>Tienda | Farmacia Noble </title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="Tienda de productos de perfumería, dermocosmética y pequeños electrodomésticos">
+  <meta name="keywords" content="ofertas perfumeria, ofertas dermocosmetica, electrodomesticos pequeños">
 </head>
 <body>
   <header class="header position-sticky top-0">
