--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble</title>
+  <title>Farmacia Noble | Farmacia, perfumería y dermocosmética </title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <meta name="description" content="Página de bienvenida a la farmacia y perfumería Noble">
+  <meta name="keywords" content="farmacia, perfumeria, dermocosmetica">
 </head>
 <body>
   <header class="header position-sticky top-0">
@@ -74,8 +77,8 @@
         </div>
         <div class="col footerContainerDiv2 ">
           <h4 class="text-decoration-underline ms-1">Contacto</h4>
-          <p>Teléfono 011-5555-1234</plass=>
-          <p>Celular 011-15-999-8765</ps=>
+          <p>Teléfono 011-5555-1234</p>
+          <p>Celular 011-15-999-8765</p>
           <p>contacto@farmacianoble.com.ar</p>
         </div>
         <div class="col footerContainerDiv3 ">
@@ -99,11 +102,12 @@
           </div>
         </div>
           </div>
-          <div class="footerContainerDiv4"><!--grupo2-->
+          <div class="footerContainerDiv4">
             <small>&copy; 2024 - Todos los Derechos Reservados.</small>
           </div>
     </div>
   </footer>
+  <script src="./js/bootstrap.bundle.min.js""></script>
   <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
