--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble </title>
+  <title>Contacto | Farmacia Noble </title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="Sitio para contactarse con farmacia Noble">
+  <meta name="keywords" content="sugerencia, reclamo, consulta, contacto">
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,43 +77,10 @@
          <textarea class="form-control" id="comentario" name="Ingrese su sugerencia o reclamo..." rows="3">...</textarea>
         </div>
         <div class="text-center">
-          <input type="submit" class="sendButton w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
+          <input type="submit" class="sendButton w-50 btn btn-primary" id="enviar" name="enviar" value="Enviar">
         </div>        
       </form>
-    </div>
-    
-
-
-    <!--<div class="mt-5 mb-5 row justify-content-center justify-content-md-between align-items-center align-items-md-stretch">
-      <div class="col-12 col-md-6  justify-content-center">
-          <form action="">
-              <div class="mb-3">
-                  <input type="text" placeholder="Ingrese su nombre y apellido" class="form-control" id="name" name="name">
-              </div>
-              <div class="mb-3">
-                  <select class="form-select" aria-label="Default select example">
-                      <option selected>Indique el motivo de contacto:</option>
-                      <option value="1">Consulta</option>
-                      <option value="2">Reclamo</option>
-                      <option value="3">Sugerencia</option>
-                    </select>
-              </div>
-              <div class="mb-3">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@servidor.com">
-              </div>
-              <div class="mb-3">
-                  <input type="tel" class="form-control" id="tel" name="tel" placeholder="(011)15-1234-5678">
-              </div>
-              <div class="mb-3">
-                 <textarea class="form-control" id="comentario" name="Ingrese su sugerencia o reclamo..." rows="3">...</textarea>
-              </div>
-              <div class="text-center">
-                  <input type="submit" class=" w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
-              </div>
-          </form>
-      </div>
-    -->
-    
+    </div>   
   </main>
   <footer class="footerContainer">
     <div class="container-fluid text-center">
