--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble</title>
+  <title>Noticias | Farmacia Noble</title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="Sitio de noticias y novedades de farmacia, perfumería y dermocosmética">
+  <meta name="keywords" content="noticias farmacia, novedades perfumeria, novedades dermocosmetica">
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +32,7 @@
                   <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link href="./tienda.html">Tienda</a>
+                  <a class="nav-link" href="./tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
@@ -54,12 +56,12 @@
       <section class="notiSection">
         <h3 class="notiSectionTitle">Medicamentos sin TACC</h3>
         <img class="notiImg1" src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
-        <p class="notiSectionText"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
+        <p class="notiSectionText"><a class="leerMas w-50 btn btn-primary" href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
       </section>
       <section class="notiSection">
         <h3 class="notiSectionTitle">Diferencias entre un protector y un bloqueador solar</h3>
         <img class="notiImg2" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
-        <p class="notiSectionText"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>
+        <p class="notiSectionText"><a class="leerMas w-50 btn btn-primary" href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>
       </section>
     </div>
   </main>
@@ -103,6 +105,7 @@
           </div>
     </div>
   </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
