--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia Noble</title>
+  <title>Tienda | Farmacia Noble </title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="Tienda de productos de perfumería, dermocosmética y pequeños electrodomésticos">
+  <meta name="keywords" content="ofertas perfumeria, ofertas dermocosmetica, electrodomesticos pequeños">
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,71 +49,54 @@
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Tienda</h1>
     <h4 class="text-center">Estas son las ofertas de esta semana</h4>
-    <h5 class="text-center">Podés acceder a nuestro catálogo completo haciendo <a href="https://www.mercadolibre.com.ar/" target="_blank">aquí</a></h5>
-    <div class="cardConteiner">
-      <section class="card">
+    <h5 class="text-center">Podés acceder a nuestro catálogo completo haciendo click <a class="tiendaLink w-10 btn btn-primaryhref="https://www.mercadolibre.com.ar/" target="_blank">aquí</a></h5>
+    
+    <div class="galeria">
+      <div class="contenedor">
         <img class="imgCard1" src="../assets/img/productos_con_descuento/Set_Carolina_Herrera.webp" alt="Imagen del set Girl Blush">
-        <section class="bodyCard">
-          <h5 class="sale">Set Good Girl Blush Carolina Herrera</h5>
-          <p class="priceCard">$180.000</p>
-        </section>
-      </section>  
-      <section class="card">
+        <span class="texto">Set Good Girl Blush Carolina Herrera</span>
+        <span class="priceCard w-50 btn btn-primary">$180.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard2" src="../assets/img/productos_con_descuento/Tommy.webp" alt="Imagen del perfume y el bolso">
-        <section class="bodyCard">
-          <h5 class="sale">Set Tommy Men Tommy Hilfiger</h5>
-          <p class="priceCard">$155.000</p>
-        </section>
-      </section>      
-      <section class="card">
+        <span class="texto">Set Tommy Men Tommy Hilfiger</span>
+        <span class="priceCard w-50 btn btn-primary">$155.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard3" src="../assets/img/productos_con_descuento/Fame.webp" alt="Imagen del perfume y el body lotion">
-        <section class="bodyCard">
-          <h5 class="sale">Set Fame Mujer Paco Rabanne Fame</h5>
-          <p class="priceCard">$170.000</p>
-        </section>
-      </section>      
-      <section class="card">
+        <span class="texto">Set Fame Mujer Paco Rabanne Fame</span>
+        <span class="priceCard w-50 btn btn-primary">$170.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard4" src="../assets/img/productos_con_descuento/Ga-ma_Cepillo_Alisador.webp" alt="Imagen del Cepillo Alisador Ga-ma">
-        <section class="bodyCard">
-          <h5 class="sale">Gama Cepillo Alisador De Pelo Modelador Glamour Brush</h5>
-          <p class="priceCard">$60.000</p>          
-        </section>
-      </section>      
-      <section class="card">
+        <span class="texto">Gama Cepillo Alisador De Pelo Modelador Glamour Brush</span>
+        <span class="priceCard w-50 btn btn-primary">$60.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard5" src="../assets/img/productos_con_descuento/Afeitadora_Ga-ma.webp" alt="Imágen de la Afeitadora Gama Italy">
-        <section class="bodyCard">
-          <h5 class="sale">Afeitadora Gama Italy BECSH311 Negra</h5>
-          <p class="priceCard">$100.000</p>   
-        </section>
-      </section>
-      <section class="card">
+        <span class="texto">Afeitadora Gama Italy BECSH311 Negra</span>
+        <span class="priceCard w-50 btn btn-primary">$100.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard6" src="../assets/img/productos_con_descuento/Omron.webp" alt="Imagen del tensiómetro Omron de muñeca">
-        <section class="bodyCard">
-          <h5 class="sale">Tensiómetro Omron Hem-6123 De Muñeca  </h5>
-          <p class="priceCard">$55.000</p>        
-        </section>
-      </section>
-      <section class="card">
+        <span class="texto">Tensiómetro Omron Hem-6123 De Muñeca</span>
+        <span class="priceCard w-50 btn btn-primary">$55.000</span> 
+      </div>
+      <div class="contenedor">
         <img class="imgCard7" src="../assets/img/productos_con_descuento/Combo_Dermaglos_Solar.webp" alt="Imagen de los productos del combo Dermaglós">
-        <section class="bodyCard">
-          <h5 class="sale">Combo Dermaglós Solar</h5>
-          <p class="priceCard">$28.000</p>
-        </section>
-      </section>
-      <section class="card">
+        <span class="texto">Combo Dermaglós Solar</span>
+        <span class="priceCard w-50 btn btn-primary">$28.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard8" src="../assets/img/productos_con_descuento/Combo_Anticaida_Valcatil.webp" alt="Imagen de Cápsulas y Shampoo">
-        <section class="bodyCard">
-          <h5 class="sale">Combo Anticaída Valcatil Max</h5>
-          <p class="priceCard">$14.000</p>
-        </section>      
-      </section>
-      <section class="card">
+        <span class="texto">Combo Anticaída Valcatil Max</span>
+        <span class="priceCard w-50 btn btn-primary">$14.000</span>
+      </div>
+      <div class="contenedor">
         <img class="imgCard9" src="../assets/img/productos_con_descuento/Curflex_Duo.webp" alt="imagen Curflex Duo">
-        <section class="bodyCard">
-          <h5 class="sale">Curflex Duo x 310 g Sabor Naranja</h5>
-          <p class="priceCard">$16.000</p>
-        </section>
-      </section>
+        <span class="texto">Curflex Duo x 310 g Sabor Naranja</span>
+        <span class="priceCard w-50 btn btn-primary">$16.000</span>
+      </div>
     </div>
   </main>
   <footer class="footerContainer">
@@ -124,8 +109,8 @@
         </div>
         <div class="col footerContainerDiv2 ">
           <h4 class="text-decoration-underline ms-1">Contacto</h4>
-          <p>Teléfono 011-5555-1234</plass=>
-          <p>Celular 011-15-999-8765</ps=>
+          <p>Teléfono 011-5555-1234</p>
+          <p>Celular 011-15-999-8765</p>
           <p>contacto@farmacianoble.com.ar</p>
         </div>
         <div class="col footerContainerDiv3 ">
@@ -149,11 +134,10 @@
           </div>
         </div>
           </div>
-          <div class="footerContainerDiv4"><!--grupo2-->
+          <div class="footerContainerDiv4">
             <small>&copy; 2024 - Todos los Derechos Reservados.</small>
           </div>
     </div>
-  </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
-</body>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  </body>
 </html>
